# Youtube-AI-Briefer

./: .gitignore  README.md  app_logic.py  config.json  display_result.py  fetch_and_display_transcript.py  globals.py  main.py  pyproject.toml  youtube_briefer_openia.py
ai/: generate_tags.py  process_info.py  rag_functions.py  whisper_transcript.py
components/: collapsible.py
functions/: get_transcript.py  get_video_id.py  load_config.py  logger.py  split_text.py
screens/: config_screen.py  display_result.py
